fixed background extra margin

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,10 +2,12 @@
 
 .background{
   background-color: #E8E8E8;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   z-index: -1;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .homepage{
@@ -38,7 +40,7 @@
   background-color: black;
   display: inline-block;
   /* z-index: 2; */
-  position: absolute;
+  /* position: absolute; */
   animation: flashing_typewriter 1s linear, cover_words 2s linear;
   animation-iteration-count: infinite;
 }
@@ -50,7 +52,7 @@
   color: rgb(50, 50, 50);
   padding-top: 10px;
   display: inline-block;
-  position: relative;
+  /* position: relative; */
   /* z-index: 0; */
   padding: 0;
 }
